--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/mobile-responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <!-- header section started -->
     <header>
         <nav>
             <div class="site-logo">
@@ -24,13 +26,34 @@
                     <li>
                         <div class="nav-link-span">
                             <p>Follow Us On</p>
-
+                            <i style="color: red;" class="fa-brands fa-youtube"></i>
+                            <i style="color: black;" class="fa-brands fa-tiktok"></i>
                         </div>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
+    <!-- header section ended -->
+    <!-- main section started -->
+    <main>
+        <section class="goat-container">
+            <div class="goat-content">
+                <h2>Play Like The</h2>
+                <h1>G.O.A.T.</h1>
+                <p class="goat-description"><i style="color: tomato;" class="fa-regular fa-circle-play"></i> 1-Click instant play</p>
+                <p class="goat-description"><i style="color: tomato;" class="fa-solid fa-download"></i> No Download</p>
+                <p class="goat-description"><i style="color: tomato;" class="fa-solid fa-user-group"></i> 1000s of supported online games</p>
+                <div class="goat-btns">
+                    <button class="btn tomato-btn">SIGN IN</button><button class="btn blue-btn">GO ROUGE</button>
+                </div>
+            </div>
+            <div class="goat-img">
+                <img src="./images/Group 18.png" alt="">
+            </div>
+        </section>
+    </main>
+    <!-- main section ended -->
 </body>
 
 </html>
