gamer video play and career section done!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/mobile-responsive.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -37,13 +39,16 @@
     <!-- header section ended -->
     <!-- main section started -->
     <main>
+        <!-- goat section started -->
         <section class="goat-container">
             <div class="goat-content">
                 <h2>Play Like The</h2>
-                <h1>G.O.A.T.</h1>
-                <p class="goat-description"><i style="color: tomato;" class="fa-regular fa-circle-play"></i> 1-Click instant play</p>
+                <h1 class="gradient-text">G.O.A.T.</h1>
+                <p class="goat-description"><i style="color: tomato;" class="fa-regular fa-circle-play"></i> 1-Click
+                    instant play</p>
                 <p class="goat-description"><i style="color: tomato;" class="fa-solid fa-download"></i> No Download</p>
-                <p class="goat-description"><i style="color: tomato;" class="fa-solid fa-user-group"></i> 1000s of supported online games</p>
+                <p class="goat-description"><i style="color: tomato;" class="fa-solid fa-user-group"></i> 1000s of
+                    supported online games</p>
                 <div class="goat-btns">
                     <button class="btn tomato-btn">SIGN IN</button><button class="btn blue-btn">GO ROUGE</button>
                 </div>
@@ -52,6 +57,93 @@
                 <img src="./images/Group 18.png" alt="">
             </div>
         </section>
+        <!-- goat section ended -->
+        <!-- game section started -->
+        <section class="games-container">
+            <div class="games-img">
+                <img src="./images/pngwing 4.png" alt="">
+            </div>
+            <div class="games-content">
+                <h2 class="gradient-text">We are gamer</h2>
+                <p>An international digital games and entertainment company. We develop, publish and distribute
+                    multiplayer mobile games. We reach over 400 million players each month and our audience keeps
+                    growing.</p>
+                <button class="btn tomato-btn gamer-btn">KNOW MORE</button>
+                <p>Our purpose...</p>
+                <h3>“unleash the gamer in everyone”</h3>
+            </div>
+        </section>
+        <!-- game section ended -->
+        <!-- video section started -->
+        <section class="video-container">
+            <h2>Online Games <spa class="gradient-text">Funny Videos</spa>
+            </h2>
+            <p class="video-content-subtile">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="video-card-container">
+                <div class="video-card">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="video-card">
+                    <img src="./images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="video-card">
+                    <img src="./images/Rectangle 7.png" alt="">
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div class="video-card">
+                    <img src="./images/Rectangle 6.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+        </section>
+        <!-- video section ended -->
+        <!-- play section started -->
+        <section class="play-container">
+            <div class="play-content">
+                <h2><span class="gradient-text">Play Instantly,</span> No Downloads No Installs.</h2>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your
+                    browser.</p>
+            </div>
+            <div class="play-img">
+                <img class="absolute-img" src="./images/Rectangle 55.png" alt="">
+                <img class="relative-img" src="./images/Rectangle 66.png" alt="">
+            </div>
+        </section>
+        <!-- play section ended -->
+        <!-- career section started -->
+        <section class="career-container">
+            <div class="career-content">
+                <h2>Careers</h2>
+                <p>Gamer is driven to create the best and most fun games for our millions of players all around the
+                    world, and we,re always on the lookout for more top talent to join our growing team. If you,d like
+                    to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+                <div class="career-list">
+                    <ul>
+                        <li>Multimedia Artist +</li>
+                        <li>Data Engineer +</li>
+                        <li>Adroid Engineer +</li>
+                        <li>Server Developer +</li>
+                        <li>Group Financial Accountant +</li>
+                        <li>Senior User Acuisition Specialist +</li>
+                    </ul>
+                    <ul  class="right-list">
+                        <li>Lisbon, Portugal</li>
+                        <li>Zoetermeer, Netherlands</li>
+                        <li>Lisbon, Portugal</li>
+                        <li>London, United Kingdom</li>
+                        <li>Lisbon, Portugal</li>
+                        <li>Lisbon, Portugal</li>
+                    </ul>
+                </div>
+                <button class="btn career-btn">See all positions</button>
+            </div>
+            <div class="career-img">
+                <img src="./images/Group 65.png" alt="">
+            </div>
+        </section>
+        <!-- career section started -->
     </main>
     <!-- main section ended -->
 </body>
