game list and footer done!

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <li>Group Financial Accountant +</li>
                         <li>Senior User Acuisition Specialist +</li>
                     </ul>
-                    <ul  class="right-list">
+                    <ul class="right-list">
                         <li>Lisbon, Portugal</li>
                         <li>Zoetermeer, Netherlands</li>
                         <li>Lisbon, Portugal</li>
@@ -144,8 +144,88 @@
             </div>
         </section>
         <!-- career section started -->
+        <!-- game list section started -->
+        <section class="game-list-container">
+            <div class="game-list-card">
+                <img src="./images/Rectangle 11.png" alt="">
+                <h4>Action Games</h4>
+            </div>
+            <div class="game-list-card">
+                <img src="./images/Rectangle 12.png" alt="">
+                <h4>Adventure Games</h4>
+            </div>
+            <div class="game-list-card">
+                <img src="./images/Rectangle 13.png" alt="">
+                <h4>Arcade Games</h4>
+            </div>
+            <div class="game-list-card">
+                <img src="./images/Rectangle 14.png" alt="">
+                <h4>Educational Games</h4>
+            </div>
+            <div class="game-list-card">
+                <img src="./images/Rectangle 15.png" alt="">
+                <h4>Word Games</h4>
+            </div>
+            <div class="game-list-card">
+                <img src="./images/Rectangle 16.png" alt="">
+                <h4>Role Palying Games</h4>
+            </div>
+            <div class="game-list-card">
+                <img src="./images/Rectangle 17.png" alt="">
+                <h4>Music & Audio Games</h4>
+            </div>
+            <div class="game-list-card">
+                <img src="./images/Rectangle 18.png" alt="">
+                <h4>Puzzle Games</h4>
+            </div>
+            <div class="game-list-card">
+                <img src="./images/Rectangle 19.png" alt="">
+                <h4>Strategy Games</h4>
+            </div>
+        </section>
+        <!-- game list section ended -->
     </main>
     <!-- main section ended -->
+    <!-- footer section started -->
+    <footer class="footer-container">
+        <div class="footer-header">
+            <div class="site-logo">
+                <img src="./images/Frame.png" alt="">
+                <h1><span class="logo-span">G</span>amer</h1>
+            </div>
+        </div>
+        <div class="footer-nav">
+            <ul>
+                <li>Our Story</li>
+                <li>Games</li>
+                <li>Web Games</li>
+                <li>Careers</li>
+                <li>Support</li>
+                <li>My Account</li>
+            </ul>
+        </div>
+        <div class="footer-icons">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-apple"></i>
+        </div>
+        <div class="footer-links">
+            <ul>
+                <li>Terms and Conditions</li>
+                <li>Privacy Policy</li>
+                <li>Cookie Policy</li>
+                <li>Privacy Settings</li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
+    </footer>
+    <!-- footer section ended -->
+
 </body>
 
 </html>
