--- a/index.html
+++ b/index.html
@@ -83,18 +83,34 @@
                 <div class="video-card">
                     <img src="./images/Rectangle 4.png" alt="">
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <div class="video-watch">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <h4>Watch Now</h4>
+                    </div>
                 </div>
                 <div class="video-card">
                     <img src="./images/Rectangle 5.png" alt="">
                     <p>Did you score? #unblockedgames #school</p>
+                    <div class="video-watch">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <h4>Watch Now</h4>
+                    </div>
                 </div>
                 <div class="video-card">
                     <img src="./images/Rectangle 7.png" alt="">
                     <p>Breaking game records like OG</p>
+                    <div class="video-watch">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <h4>Watch Now</h4>
+                    </div>
                 </div>
                 <div class="video-card">
                     <img src="./images/Rectangle 6.png" alt="">
                     <p>Busted gaming on school laptop, but you are still lit.</p>
+                    <div class="video-watch">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <h4>Watch Now</h4>
+                    </div>
                 </div>
             </div>
         </section>
